[CXF-7056]use new JVM options with recent java9 kit