@@ -2195,10 +2195,10 @@
         <profile>
 	    <id>java9</id>
 	    <properties>
-                <cxf.server.launcher.vmargs>-ea -Xpatch:java.annotations.common=${project.basedir}/target/java9/javax.annotation-api-1.2.jar -Xpatch:java.transaction=${project.basedir}/target/java9 -XaddExports:java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED -XaddExports:java.base/sun.security.util=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xerces.internal.impl.xs=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xerces.internal.impl.xs.util=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED -XaddExports:java.xml.bind/com.sun.xml.internal.bind.marshaller=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xml.internal.resolver=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xml.internal.resolver.tools=ALL-UNNAMED -XaddExports:java.xml.ws/com.sun.xml.internal.messaging.saaj.soap=ALL-UNNAMED -XaddExports:jdk.xml.bind/com.sun.tools.internal.xjc.api.impl.s2j=ALL-UNNAMED -XaddExports:jdk.xml.bind/com.sun.tools.internal.xjc=ALL-UNNAMED -XaddExports:jdk.xml.bind/com.sun.tools.internal.xjc.api=ALL-UNNAMED -XaddExports:jdk.xml.bind/com.sun.codemodel.internal=ALL-UNNAMED -XaddExports:jdk.xml.bind/com.sun.codemodel.internal.writer=ALL-UNNAMED -XaddExports:java.corba/com.sun.corba.se.impl.corba=ALL-UNNAMED -addmods java.corba,java.activation,java.xml.bind,java.xml.ws,jdk.xml.bind</cxf.server.launcher.vmargs>
-                <cxf.surefire.fork.vmargs>-ea -Xpatch:java.annotations.common=${project.basedir}/target/java9/javax.annotation-api-1.2.jar -Xpatch:java.transaction=${project.basedir}/target/java9 -XaddExports:java.base/sun.security.util=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xerces.internal.impl.xs=ALL-UNNAMED -XaddExports:java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xerces.internal.impl.xs.util=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED -XaddExports:java.xml.bind/com.sun.xml.internal.bind.marshaller=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xml.internal.resolver=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xml.internal.resolver.tools=ALL-UNNAMED -XaddExports:java.xml.ws/com.sun.xml.internal.messaging.saaj.soap=ALL-UNNAMED -XaddExports:jdk.xml.bind/com.sun.tools.internal.xjc.api.impl.s2j=ALL-UNNAMED -XaddExports:jdk.xml.bind/com.sun.tools.internal.xjc=ALL-UNNAMED -XaddExports:jdk.xml.bind/com.sun.tools.internal.xjc.api=ALL-UNNAMED -XaddExports:jdk.xml.bind/com.sun.codemodel.internal=ALL-UNNAMED -XaddExports:jdk.xml.bind/com.sun.codemodel.internal.writer=ALL-UNNAMED -XaddExports:java.corba/com.sun.corba.se.impl.corba=ALL-UNNAMED -addmods java.corba,java.activation,java.xml.bind,java.xml.ws,jdk.xml.bind</cxf.surefire.fork.vmargs>
-                <cxf.xjc.jvmArgs>-addmods java.activation,java.xml.bind,java.xml.ws -XaddExports:java.xml.bind/com.sun.xml.internal.bind.v2.runtime=ALL-UNNAMED -XaddExports:jdk.xml.dom/org.w3c.dom.html=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xerces.internal.impl.xs=ALL-UNNAMED -XaddExports:java.xml.bind/com.sun.xml.internal.bind.marshaller=ALL-UNNAMED</cxf.xjc.jvmArgs>
-                <cxf.codegen.jvmArgs>-addmods java.activation,java.xml.bind,java.xml.ws -XaddExports:java.xml.bind/com.sun.xml.internal.bind.v2.runtime=ALL-UNNAMED -XaddExports:jdk.xml.dom/org.w3c.dom.html=ALL-UNNAMED -XaddExports:java.xml/com.sun.org.apache.xerces.internal.impl.xs=ALL-UNNAMED -XaddExports:java.xml.bind/com.sun.xml.internal.bind.marshaller=ALL-UNNAMED</cxf.codegen.jvmArgs>
+                <cxf.server.launcher.vmargs>-ea --patch-module java.annotations.common=${project.basedir}/target/java9/javax.annotation-api-1.2.jar --patch-module java.transaction=${project.basedir}/target/java9 --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED --add-exports=java.base/sun.security.util=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xerces.internal.impl.xs=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xerces.internal.impl.xs.util=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED --add-exports=java.xml.bind/com.sun.xml.internal.bind.marshaller=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xml.internal.resolver=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xml.internal.resolver.tools=ALL-UNNAMED --add-exports=java.xml.ws/com.sun.xml.internal.messaging.saaj.soap=ALL-UNNAMED --add-exports=jdk.xml.bind/com.sun.tools.internal.xjc.api.impl.s2j=ALL-UNNAMED --add-exports=jdk.xml.bind/com.sun.tools.internal.xjc=ALL-UNNAMED --add-exports=jdk.xml.bind/com.sun.tools.internal.xjc.api=ALL-UNNAMED --add-exports=jdk.xml.bind/com.sun.codemodel.internal=ALL-UNNAMED --add-exports=jdk.xml.bind/com.sun.codemodel.internal.writer=ALL-UNNAMED --add-exports=java.corba/com.sun.corba.se.impl.corba=ALL-UNNAMED --add-modules java.corba,java.activation,java.xml.bind,java.xml.ws,jdk.xml.bind</cxf.server.launcher.vmargs>
+                <cxf.surefire.fork.vmargs>-ea --patch-module java.annotations.common=${project.basedir}/target/java9/javax.annotation-api-1.2.jar --patch-module java.transaction=${project.basedir}/target/java9 --add-exports=java.base/sun.security.util=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xerces.internal.impl.xs=ALL-UNNAMED --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xerces.internal.impl.xs.util=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED --add-exports=java.xml.bind/com.sun.xml.internal.bind.marshaller=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xml.internal.resolver=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xml.internal.resolver.tools=ALL-UNNAMED --add-exports=java.xml.ws/com.sun.xml.internal.messaging.saaj.soap=ALL-UNNAMED --add-exports=jdk.xml.bind/com.sun.tools.internal.xjc.api.impl.s2j=ALL-UNNAMED --add-exports=jdk.xml.bind/com.sun.tools.internal.xjc=ALL-UNNAMED --add-exports=jdk.xml.bind/com.sun.tools.internal.xjc.api=ALL-UNNAMED --add-exports=jdk.xml.bind/com.sun.codemodel.internal=ALL-UNNAMED --add-exports=jdk.xml.bind/com.sun.codemodel.internal.writer=ALL-UNNAMED --add-exports=java.corba/com.sun.corba.se.impl.corba=ALL-UNNAMED --add-modules java.corba,java.activation,java.xml.bind,java.xml.ws,jdk.xml.bind</cxf.surefire.fork.vmargs>
+                <cxf.xjc.jvmArgs>--add-modules java.activation,java.xml.bind,java.xml.ws --add-exports=java.xml.bind/com.sun.xml.internal.bind.v2.runtime=ALL-UNNAMED --add-exports=jdk.xml.dom/org.w3c.dom.html=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xerces.internal.impl.xs=ALL-UNNAMED --add-exports=java.xml.bind/com.sun.xml.internal.bind.marshaller=ALL-UNNAMED</cxf.xjc.jvmArgs>
+                <cxf.codegen.jvmArgs>--add-modules java.activation,java.xml.bind,java.xml.ws --add-exports=java.xml.bind/com.sun.xml.internal.bind.v2.runtime=ALL-UNNAMED --add-exports=jdk.xml.dom/org.w3c.dom.html=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xerces.internal.impl.xs=ALL-UNNAMED --add-exports=java.xml.bind/com.sun.xml.internal.bind.marshaller=ALL-UNNAMED</cxf.codegen.jvmArgs>
                 <cxf.codegenplugin.forkmode>true</cxf.codegenplugin.forkmode>
                 <!--cxf.xjcplugin.forkmode>true</cxf.xjcplugin.forkmode-->
 	    </properties>
